# connect4

./: README.md  tasks.py
connect4/: .pylintrc  pyproject.toml
connect4/documentation/: implementation.md  specification.md  testing.md  userGuide.md
connect4/documentation/weekly reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md
connect4/src/: AI.py  connect4.py  main.py
connect4/src/tests/: ai_test.py  connect4_test.py
documentation/: specification.md
documentation/weekly reports/: week1.md
