[tool.poetry]
name = "connect4"
version = "0.1.0"
description = ""
authors = ["Minttu Gomez <minttu.jamsa@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.6.4"
pylint = "^3.3.1"
pytest = "^8.3.3"
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
